# nuvlaedge

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.slim-docker  README.md  RELEASE.md  build-local.sh  build-remote.sh  generate-requirements.sh  image-create.sh  local-build.sh  pyproject.toml  sonar-project.properties  tox.ini
.github/: release-please-config.json  release.yml
.github/workflows/: base-image.yml  build-main-devel.yml  bump-version.yml  common-lib-unit-tests.yml  functional-unit-tests.yml  manual-release.yml  manual-validation.yml  release-please.yml  release-validation.yml  release.yml  test-common-lib.yml  unit-tests-common-lib.yml  unit-tests-system-manager.yml  unit-tests.yml  unittests.yml  validation.yml
.github/workflows/tests/: test-common-lib.yml
conf/example/: security.toml
conf/templates/: agent.toml
nuvlaedge/: license.sh
nuvlaedge/agent/: ___init__.py  __init__.py  __main__.py  _activate.py  _agent_old.py  _infrastructure.py  _telemetry.py  activate.py  agent.py  agent_bis.py  infrastructure.py  job.py  manager.py  settings.py  telemetry.py  worker.py
nuvlaedge/agent/common/: __init__.py  _nuvlaedge_common.py  exceptions.py  legacy_support.py  nuvlaedge_common.py  status_handler.py  thread_handler.py  util.py
nuvlaedge/agent/config/: agent_logger_config.conf
nuvlaedge/agent/docker-tools/: Dockerfile
nuvlaedge/agent/monitor/: __init__.py  edge_status.py
nuvlaedge/agent/monitor/components/: __init__.py  container_stats.py  geolocation.py  gpio.py  network.py  nuvlaedge_info.py  power.py  resources.py  temperature.py  vulnerabilities.py
nuvlaedge/agent/monitor/data/: geolocation_data.py  gpio_data.py  network_data.py  nuvlaedge_data.py  orchestrator_data.py  power_data.py  resources_data.py  temperature_data.py  vulnerabilities_data.py
nuvlaedge/agent/nuvla/: client_wrapper.py  nuvla_watchdog.py  nuvlaedge_session.py  tracked_resources.py
nuvlaedge/agent/nuvla/resources/: __init__.py  base.py  credential.py  infrastructure_service.py  nuvla_id.py  nuvlaedge.py  nuvlaedge_res.py  nuvlaedge_status.py  telemetry_payload.py
nuvlaedge/agent/orchestrator/: __init__.py  docker.py  factory.py  job_local.py  kubernetes.py
nuvlaedge/agent/worker/: manager.py  worker.py
nuvlaedge/agent/worker/workers/: commissioner.py  peripheral_manager.py  telemetry.py  vpn_handler.py
nuvlaedge/agent/workers/: commissioner.py  job_handler.py  peripheral_manager.py  telemetry.py  vpn_handler.py
nuvlaedge/agent/workers/monitor/: __init__.py  edge_status.py
nuvlaedge/broker/: __init__.py  file_broker.py
nuvlaedge/common/: NmapOutputXMLParser.py  config_logger.py  constant_files.py  constants.py  data_gateway.py  file_operations.py  nmap_output_xml_parser.py  nuvlaedge_base_model.py  nuvlaedge_config.py  nuvlaedge_logging.py  settings_parser.py  thread_tracer.py  timed_actions.py  utils.py
nuvlaedge/models/: __init__.py  messages.py  nuvla_resources.py  peripheral.py
nuvlaedge/on_stop/: __init__.py  __main__.py
nuvlaedge/peripherals/: _peripheral_manager.py  peripheral.py  peripheral_manager.py  peripheral_manager_db.py
nuvlaedge/peripherals/bluetooth/: __init__.py  __main__.py
nuvlaedge/peripherals/gpu/: Dockerfile.gpu  __init__.py  __main__.py  cuda_scan.py
nuvlaedge/peripherals/modbus/: __init__.py  __main__.py
nuvlaedge/peripherals/network/: __init__.py  __main__.py
nuvlaedge/peripherals/scripts/: modbus.py  network.py
nuvlaedge/peripherals/usb/: go.mod  go.sum  usb.go
nuvlaedge/security/: __init__.py  __main__.py  constants.py  security-entrypoint.sh  security.py  settings.py
nuvlaedge/security/patch/: vulscan.nse
nuvlaedge/system_manager/: Requirements.py  Supervise.py  __init__.py  __main__.py  requirements.py  supervise.py
nuvlaedge/system_manager/common/: ContainerRuntime.py  coe_client.py  container_runtime.py  utils.py
nuvlaedge/system_manager/orchestrator/: __init__.py  docker.py  factory.py  kubernetes.py
scripts/auto-installer/: .howToInstall  install-requirements.sh  nuvlabox-auto-installer-usb  nuvlabox-auto-installer-usb.sh
scripts/auto-installer/feedback/raspberrypi/: .howToInstall  (+1 more)
scripts/auto-installer/systemd/: .howToInstall  nuvlabox-auto-installer-usb.service
scripts/compute-api/: api.sh
scripts/credential-manager/: k8s-cred-test.sh  kubernetes-credential-manager.sh
scripts/docker-auto-cleanup/: docker-prune.sh
scripts/vpn-client/: .env  get_ip.sh  openvpn-client.sh  wait-for-vpn-update.sh
tests/agent/: README.md  _test_activate.py  _test_agent.py  _test_infrastructure.py  _test_nuvlaedge_common.py  _test_telemetry.py  test_activate.py  test_agent.py  test_agent_main.py  test_agent_settings.py  test_client_wrapper.py  test_infrastructure.py  test_job.py  test_main.py  test_manager.py  test_nuvlaedge_common.py  test_status_handler.py  test_telemetry.py  test_thread_handler.py  test_worker.py
tests/agent/nuvla-resources/: test_nuvla_id.py
tests/agent/orchestrator/: pod_system_manager.json  pod_system_manager.pkl  test_docker_client.py  test_factory.py  test_job_local.py  test_kubernetes_client.py
tests/agent/resources/: test_base.py
tests/agent/utils/: fake.py  test_utils.py
tests/agent/workers/: test_commissioner.py  test_telemetry.py  test_vpn_handler.py
tests/broker/: test_file_broker.py
tests/common/: test_constant_files.py  test_constants.py  test_data_gateway.py  test_file_operations.py  test_logging.py  test_nmap_output_xml_parser.py  test_settings_parser.py  test_thread_tracer.py  test_timed_actions.py  test_utils.py
tests/models/: test_messages.py  test_utils.py
tests/on_stop/: test_on_stop.py
tests/peripherals/: test_peripheral.py  test_peripheral_manager.py  test_peripheral_manager_db.py
tests/security/: test_security.py
tests/system_manager/: README.md  test_containers.py  test_docker_client.py  test_kubernetes_client.py  test_software_requirements.py  test_supervise.py  test_system_requirements.py  test_utils.py
tests/system_manager/utils/: fake.py
(+40 files in other folders)
