[tool.poetry]
name = "nuvlaedge"
version = "2.11.2"
description = "NuvlaEdge source code"
authors = ["Nacho <nacho@sixsq.com>"]
readme = "README.md"
packages = [{include = "nuvlaedge"}]

[tool.poetry.scripts]
# Main components
system-manager = "nuvlaedge.system_manager.__main__:entry"
on-stop = "nuvlaedge.on_stop:main"
agent = "nuvlaedge.agent:entry"
# Peripherals
network = "nuvlaedge.peripherals.network.__init__:entry"
bluetooth = "nuvlaedge.peripherals.bluetooth.__init__:entry"
modbus = "nuvlaedge.peripherals.modbus.__init__:entry"
gpu = "nuvlaedge.peripherals.gpu.__init__:entry"
security = "nuvlaedge.security:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.7"
requests = "2.27.1"
nuvla-api = "3.0.9"
docker = "6.1.1"
kubernetes = "26.1.0"

# Common library deps
filelock = "3.12.0"

# Agent Dependencies
[tool.poetry.group.agent.dependencies]
psutil = "5.9.5"

[tool.poetry.group.bluetooth.dependencies]
bleak = { version = "^0.21.1", python = ">=3.11,<3.13"}

# Netowrk peripheral dependencies
[tool.poetry.group.network.dependencies]
zeroconf = "^0.62.0"
wsdiscovery = "2.0.0"
ssdpy = "0.4.1"
xmltodict = "0.13.0"

# Modbus peripheral Deps
[tool.poetry.group.modbus.dependencies]
pymodbus = "3.2.2"
paho-mqtt = "1.6.1"

# System manager dependencies
[tool.poetry.group.tests.dependencies]
pytest = "7.3.1"
pytest-cov = "4.0.0"
mock = "5.0.2"

[tool.poetry.group.system-manager.dependencies]
cryptography = "41.0.3"
pyopenssl = "^23.1.1"

[tool.poetry.group.gpu.dependencies]
packaging = "23.1"
six = "1.16.0"


[tool.poetry.group.job-engine.dependencies]
pyyaml = "6.0.1"
statsd = "4.0.1"
packaging = "23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."nuvlaedge/__init__.py"]
